--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Login</h1>
-string Email, string Password
+string Email2, string Password
 <hr />
 <div class="row">
     <div class="col-md-4">
