Criação da estrutura da página de redefinição de senha
Criação da estrutura da página de redefinição de senha
Criação de página base para estruturação do front-end.

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -11,6 +11,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="~/css/site.css" />
+    
     
     <title>Cadastro</title>
 </head>
@@ -27,7 +29,7 @@
             <div class="form-group">
                 <label asp-for="FirtName" class="control-label">Primeiro Nome</label>
                 <input asp-for="FirtName" class="form-control" /> 
-                <span asp-validation-for="FirtName" class="text-danger"></span>
+                <span asp-validation-for="FirtName" class="text- danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastName" class="control-label">Sobrenome</label>
