--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -14,6 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="~/css/site.css" />
     
     <title>Document</title>
 </head>
@@ -35,10 +36,12 @@
                 <label asp-for="PasswordHash" class="control-label"> Senha </label>
                 <input asp-for="PasswordHash" class="form-control" />
                 <span asp-validation-for="PasswordHash" class="text-danger"></span>
+                <small><a asp-controller="Account" asp-action="PasswordReset">Esqueci a senha</a></small><!--<a asp-action="Index">Voltar</a>-->
             </div>
+            
 
             <div class="form-group">
-            <input type="submit" value="Login" class="btn btn-success" />
+            <input type="submit" value="Login" class="btn btn-primary" data-toggle="button" aria-pressed="false" />
             </div>
 
             <h1>@ViewBag.register</h1> 
@@ -46,7 +49,9 @@
             </form><div>
     
         <div class="col-md-4"> </div>
-        <a asp-controller="Account" asp-action="Register">Não tenho usuário</a><!--<a asp-action="Index">Voltar</a>-->
+        <small><a asp-controller="Account" asp-action="Register">Não tenho usuário</a></small><!--<a asp-action="Index">Voltar</a>-->
+        <br>
+        
     </div>
     </div>
     </div>
