--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,67 +1,118 @@
 @model projetotg.Models.AppUser
-
 @{
-    ViewData["Title"] = "Login";
+ViewData["Title"] = "Login";
 }
 <!
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
-    <link rel="stylesheet" href="~/css/site.css" />
-    
-    <title>Document</title>
-</head>
-<body class="login">
-    <h1 class="titulos"><center>Login</center></h1>
-    <hr />
-    <div class="row">
-        <div class="col-md-4"> </div>
-        <div class="col-md-4">
-            <form asp-controller="Account" asp-action="Login">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"> Usuário </label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Login</title>
+      <link rel="icon" href="/aciam/static/images/favicon.png" type="image/x-icon">
+      <link rel="apple-touch-icon" href="/aciam/static/images/apple-touch-icon.png">
+      <link rel="stylesheet" href="/aciam/static/css/main.min.css">
+      <style>
+         .o365adal {
+         width: 450px; 
+         height: 450px;
+         overflow: scroll;
+         }
+      </style>
+      <script type="text/javascript">
+         if (self === top) {
+             var antiClickjack = document.getElementById("antiClickjack");
+             antiClickjack.parentNode.removeChild(antiClickjack);
+         } else {
+             top.location = self.location;
+         } 
+      </script>
+   </head>
+   <body>
+      <div id="top-container" class="container">
+      <div class="row">
+         <div class="col-sm-2 col-md-3"></div>
+         <div class="col-sm-8 col-md-6">
+            <div class="well bg-fill-1">
+               <form id="login" name="login" class="form-horizontal" action="" method="post">
+                  <input type="hidden" name="SMAGENTNAME" id="SMAGENTNAME" value="a0187457_ssoe_authac00_agent">
+                  <input type="hidden" name="SMENC" id="SMENC" value="UTF-8">
+                  <fieldset>
+                     <div class="row">
+                        <div class="clearfix border-bottom margin-bottom-xl">
+                           <h3><strong>ProjetoTg</strong></h3>
+                        </div>
+                     </div>
+                     <div class="hide" id="pageerror">
+                        <div class="alert alert-dismissible alert-danger bang" id="errorcontent">
+                        </div>
+                     </div>
+                     <div class="form-group">
+                        <label for="userID" class="col-sm-3 col-md-3 control-label">Usuário</label>
+                        <div class="col-sm-9 col-md-9">
+                           <input type="text" class="form-control" id="userID" placeholder="" name="USER" value="" autofocus="">
+                        </div>
+                     </div>
+                     <div class="form-group">
+                        <label for="password" class="col-sm-3 col-md-3 control-label">Senha</label>
+                        <div class="col-sm-9 col-md-9">
+                           <input type="password" id="password" class="form-control" name="PASSWORD" oncopy="return false">
+                           <div class="padding-top-small">
+                              <a href="/Account/PasswordReset">Esqueceu a senha?</a>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="form-group">
+                        <div class="col-sm-3 col-md-3"></div>
+                        <div class="col-sm-9 col-md-9">
+                        </div>
+                     </div>
+                     <div class="form-group">
+                        <div class="col-sm-4 col-md-4"></div>
+                        <div class="col-sm-4 col-md-4">
+                        </div>
+                        <div class="col-sm-4 col-md-4">
+                           <button id="loginbtn" type="submit" class="btn btn-block btn-primary">Acessar
+                           <span class="hide" id="loadingimg">
+                           <img id="loadingimg" height="20px" alt="Loading.." src="/aciam/static/images/processing-transparent-v3.gif">
+                           </span>
+                           </button> 
+                        </div>
+                     </div>
+                  </fieldset>
+               </form>
+               <div class="row"></div>
             </div>
-            
-            <div class="form-group">
-                <label asp-for="PasswordHash" class="control-label"> Senha </label>
-                <input asp-for="PasswordHash" class="form-control" />
-                <span asp-validation-for="PasswordHash" class="text-danger"></span>
-                <small><a asp-controller="Account" asp-action="PasswordReset">Esqueci a senha</a></small><!--<a asp-action="Index">Voltar</a>-->
-            </div>
-            
+         </div>
+         <div class="col-sm-2 col-md-3"></div>
+      </div>
 
-            <div class="form-group">
-            <input type="submit" value="Login" class="btn btn-primary" data-toggle="button" aria-pressed="false" />
-            </div>
+       <div class="row">
+         <div class="col-sm-2 col-md-3"></div>
+         <div class="col-sm-8 col-md-6">
+            <div class="well bg-fill-1">
+               <form id="login" name="login" class="form-horizontal" action="" method="post">
+                  <input type="hidden" name="SMAGENTNAME" id="SMAGENTNAME" value="a0187457_ssoe_authac00_agent">
+                  <input type="hidden" name="SMENC" id="SMENC" value="UTF-8">
+                  <fieldset>
+                  <div class="padding-top-small">
+                               <a>Não tem usuário? </a><a href="/Account/Register"> Cadastrar</a>
+                           </div>
+                  </fieldset>
+               </form>
+               <div class="row"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
 
-            <h1>@ViewBag.register</h1> 
-
-            </form><div>
-    
-        <div class="col-md-4"> </div>
-        <small><a asp-controller="Account" asp-action="Register">Não tenho usuário</a></small><!--<a asp-action="Index">Voltar</a>-->
-        <br>
-        
-    </div>
-    </div>
-    </div>
-    </body>
-
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }  
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/js/tether.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" </script>
-</html>
+   </body>
+   @section Scripts {
+   @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+   }
