--- a/Views/Account/PasswordReset.cshtml
+++ b/Views/Account/PasswordReset.cshtml
@@ -1,57 +1,68 @@
 @model projetotg.Models.AppUser
-
 @{
-    ViewData["Title"] = "PasswordReset";
+ViewData["Title"] = "Register";
 }
-<!
-
-<!DOCTYPE html>
-<html lang="en">
 <head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
-    <link rel="stylesheet" href="~/css/site.css" />
-    
-    <title>Document</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
+   <link rel="stylesheet" href="~/css/site.css" />
+   <title>Cadastro</title>
 </head>
-<body class="login">
-    <h1 class="titulos"><center>Redefinição da Senha</center></h1>
-    <hr />
-    <div class="row">
-        <div class="col-md-4"> </div>
-        <div class="col-md-4">
-           <div class="jumbotron">
-                <form asp-controller="Account" asp-action="PasswordReset">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Email" class="control-label">Digite seu email: </label>
-                    <input asp-for="Email" class="form-control" /> 
-                    <br>
-                    <input type="submit" value="Redefinir Senha" class="btn btn-primary btn-sm" data-toggle="button" aria-pressed="false" />
-                    <br>
-                    <h1></h1>
-                    <small><a class="sublink" asp-controller="Account" asp-action="Register"> Não tenho usuário </a></small><!--<a asp-action="Index">Voltar</a>-->
-                <span asp-validation-for="FirtName" class="text- danger"></span>
-            </div>
+<body>
+
+   <div class="row">
+      <div class="col-sm-2 col-md-3"></div>
+      <div class="col-sm-8 col-md-6">
+         <div class="well bg-fill-1">
+            <form id="login" name="login" class="form-horizontal" action="" method="post">
+               <input type="hidden" name="SMAGENTNAME" id="SMAGENTNAME" value="a0187457_ssoe_authac00_agent">
+               <input type="hidden" name="SMENC" id="SMENC" value="UTF-8">
+               <fieldset>
+                  <div class="row">
+                     <div class="clearfix border-bottom margin-bottom-xl">
+                        <h3><strong>Redefinição de senha</strong></h3>
+                     </div>
+                  </div>
+                  <div class="hide" id="pageerror">
+                     <div class="alert alert-dismissible alert-danger bang" id="errorcontent">
+                     </div>
+                  </div>
+                  <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                  <div class="form-group">
+                     <label asp-for="FirtName" class="control-label">Digite seu email</label>
+                     <input asp-for="FirtName" class="form-control" /> 
+                     <span asp-validation-for="FirtName" class="text- danger"></span>
+                  </div>
+                  <div class="form-group">
+                     <div class="col-sm-3 col-md-3"></div>
+                     <div class="col-sm-9 col-md-9">
+                     </div>
+                  </div>
+                  <div class="form-group">
+                     <div class="col-sm-4 col-md-4"></div>
+                     <div class="col-sm-4 col-md-4">
+                     </div>
+                     <div class="col-sm-4 col-md-4">
+                        <button id="loginbtn" type="submit" class="btn btn-block btn-primary">Redefinir
+                        <span class="hide" id="loadingimg">
+                        <img id="loadingimg" height="20px" alt="Loading.." src="/aciam/static/images/processing-transparent-v3.gif">
+                        </span>
+                        </button> 
+                     </div>
+                  </div>
+               </fieldset>
+               <input name="__RequestVerificationToken" type="hidden" value="CfDJ8HQCl9iwgN9CmuPw1v9d5H0LRvcbOURX4v_OUY8kK-TRHlRh3wu5f1xYlPncYXgeR7BImp0y7qXGiR9B_a-MwcRO3QrIrt3dDcT5cqOapQtz712i1XO0DH5_qtKT8NZ5g-H9ed5ILGGP8CkJPB_0-IM">
             </form>
-           </div>
-        </div>
-        <div class="col-md-4"> </div>
-        
-    </div>
-    </div>
-    </div>
-    </body>
-
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }  
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/js/tether.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" </script>
-</html>
+            <div class="row"></div>
+         </div>
+      </div>
+      <div class="col-sm-2 col-md-3"></div>
+   </div>
+   
+</body>
+@section Scripts {
+@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
