--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿<!--
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -6,3 +7,123 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+-->
+
+@model projetotg.Models.AppUser
+@{
+ViewData["Title"] = "Login";
+}
+<!
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Login</title>
+      <link rel="icon" href="/aciam/static/images/favicon.png" type="image/x-icon">
+      <link rel="apple-touch-icon" href="/aciam/static/images/apple-touch-icon.png">
+      <link rel="stylesheet" href="/aciam/static/css/main.min.css">
+      <style>
+         .o365adal {
+         width: 450px; 
+         height: 450px;
+         overflow: scroll;
+         }
+      </style>
+      <script type="text/javascript">
+         if (self === top) {
+             var antiClickjack = document.getElementById("antiClickjack");
+             antiClickjack.parentNode.removeChild(antiClickjack);
+         } else {
+             top.location = self.location;
+         } 
+      </script>
+   </head>
+   <body>
+      <div id="top-container" class="container">
+      <div class="row">
+         <div class="col-sm-2 col-md-3"></div>
+         <div class="col-sm-8 col-md-6">
+            <div class="well bg-fill-1">
+               <form id="login" name="login" class="form-horizontal" action="" method="post">
+                  <input type="hidden" name="SMAGENTNAME" id="SMAGENTNAME" value="a0187457_ssoe_authac00_agent">
+                  <input type="hidden" name="SMENC" id="SMENC" value="UTF-8">
+                  <fieldset>
+                     <div class="row">
+                        <div class="clearfix border-bottom margin-bottom-xl">
+                           <h3><strong>Log In</strong></h3>
+                        </div>
+                     </div>
+                     <div class="hide" id="pageerror">
+                        <div class="alert alert-dismissible alert-danger bang" id="errorcontent">
+                        </div>
+                     </div>
+                     <div class="form-group">
+                        <label for="userID" class="col-sm-3 col-md-3 control-label">Usuário</label>
+                        <div class="col-sm-9 col-md-9">
+                           <input type="text" class="form-control" id="userID" placeholder="" name="USER" value="" autofocus="">
+                        </div>
+                     </div>
+                     <div class="form-group">
+                        <label for="password" class="col-sm-3 col-md-3 control-label">Senha</label>
+                        <div class="col-sm-9 col-md-9">
+                           <input type="password" id="password" class="form-control" name="PASSWORD" oncopy="return false">
+                           <div class="padding-top-small">
+                              <a href="/Account/PasswordReset">Esqueceu a senha?</a>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="form-group">
+                        <div class="col-sm-3 col-md-3"></div>
+                        <div class="col-sm-9 col-md-9">
+                        </div>
+                     </div>
+                     <div class="form-group">
+                        <div class="col-sm-4 col-md-4"></div>
+                        <div class="col-sm-4 col-md-4">
+                        </div>
+                        <div class="col-sm-4 col-md-4">
+                           <button id="loginbtn" type="submit" class="btn btn-block btn-primary">Acessar
+                           <span class="hide" id="loadingimg">
+                           <img id="loadingimg" height="20px" alt="Loading.." src="/aciam/static/images/processing-transparent-v3.gif">
+                           </span>
+                           </button> 
+                        </div>
+                     </div>
+                  </fieldset>
+               </form>
+               <div class="row"></div>
+            </div>
+         </div>
+         <div class="col-sm-2 col-md-3"></div>
+      </div>
+
+       <div class="row">
+         <div class="col-sm-2 col-md-3"></div>
+         <div class="col-sm-8 col-md-6">
+            <div class="well bg-fill-1">
+               <form id="login" name="login" class="form-horizontal" action="" method="post">
+                  <input type="hidden" name="SMAGENTNAME" id="SMAGENTNAME" value="a0187457_ssoe_authac00_agent">
+                  <input type="hidden" name="SMENC" id="SMENC" value="UTF-8">
+                  <fieldset>
+                  <div class="padding-top-small">
+                               <a>Não tem usuário? </a><a href="/Account/Register"> Cadastrar</a>
+                           </div>
+                  </fieldset>
+               </form>
+               <div class="row"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+      <div id="arcotuserdataDiv" display="none" style="display: none;"></div>
+
+   </body>
+   @section Scripts {
+   @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+   }
