--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -12,13 +12,13 @@
         <form asp-controller="Account" asp-action="Register">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FirtName" class="control-label">Primeiro Nome</label>
-                <input asp-for="FirtName" class="form-control" /> 
-                <span asp-validation-for="FirtName" class="text-danger"></span>
+                <label asp-for="FirstName" class="control-label">Primeiro Nome</label>
+                <input asp-for="FirstName" class="form-control" /> 
+                <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastName" class="control-label">Sobrenome</label>
-                <input asp-for="LastName" class="form-control" />
+                <input asp-for="LastName" class="form-control" /> 
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -33,7 +33,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="PasswordHash" class="control-label">Senha</label>
-                <input asp-for="PasswordHash" type="password" class="form-control" />
+                <input asp-for="PasswordHash" type="password" placeholder="Password" id="password" class="form-control" required/>
+                <span asp-validation-for="PasswordHash" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PasswordHash" class="control-label">Confirma Senha</label>
+                <input asp-for="PasswordHash" type="password" placeholder="Confirm Password" id="confirm_password" class="form-control" required/>
                 <span asp-validation-for="PasswordHash" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -47,6 +52,24 @@
     <a asp-controller="Home" asp-action="Index">Voltar</a>
 </div>
 
+<script>
+    var password = document.getElementById("password"), 
+    confirm_password = document.getElementById("confirm_password");
+
+function validatePassword(){
+  if(password.value != confirm_password.value) {
+    confirm_password.setCustomValidity("Passwords Don't Match");
+  } else {
+    confirm_password.setCustomValidity('');
+  }
+}
+
+password.onchange = validatePassword;
+confirm_password.onkeyup = validatePassword;
+
+</script>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
