--- a/Views/Account/PasswordResetAfterEmail.cshtml
+++ b/Views/Account/PasswordResetAfterEmail.cshtml
@@ -1,15 +1,14 @@
 @model projetotg.Models.AppUser
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "PasswordResetAfterEmail";
 }
 
-<h1>Register</h1>
-
+<h1>Redefinir senha</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Account" asp-action="PasswordReset">
+        <form asp-controller="Account" asp-action="PasswordResetAfterEmail">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label">Email</label>
@@ -28,12 +27,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="NewPassword" class="control-label">New Password</label>
-                <input asp-for="NewPassword" class="form-control" />
+                <input asp-for="NewPassword" class="form-control" id="password" />
                 <span asp-validation-for="NewPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PasswordHash" class="control-label">Password confirm</label>
-                <input asp-for="PasswordHash" type="password" placeholder="Confirm Password" id="confirm_password" class="form-control" required/>
+                <label asp-for="NewPassword" class="control-label">Password New confirm</label>
+                <input asp-for="NewPassword" type="password" placeholder="Confirm Password" id="confirm_password" class="form-control" required/>
                 <span asp-validation-for="PasswordHash" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -47,6 +46,23 @@
 <div>
     <a asp-controller="Home" asp-action="Index">Voltar</a>
 </div>
+
+<script>
+    var password = document.getElementById("password"), 
+    confirm_password = document.getElementById("confirm_password");
+
+function validatePassword(){
+  if(password.value != confirm_password.value) {
+    confirm_password.setCustomValidity("Passwords Don't Match");
+  } else {
+    confirm_password.setCustomValidity('');
+  }
+}
+
+password.onchange = validatePassword;
+confirm_password.onkeyup = validatePassword;
+
+</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
