--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -40,8 +40,8 @@ ViewData["Title"] = "Login";
                         <div class="col-sm-4 col-md-4">
                         </div>
                         <div class="col-sm-4 col-md-4">
-                           <button id="loginbtn" type="submit" class="btn btn-block btn-primary">Acessar
-                           </button> 
+                           <a href="~/Home/Index" id="loginbtn" type="submit" class="btn btn-block btn-primary">Acessar
+                           </a> 
                         </div>
                      </div>
                   </fieldset>
