adição do form de perfil atualizando label e ID

--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -12,7 +12,7 @@ Layout = "~/Views/Shared/_Layout_Home.cshtml";
             <input disabled type="text" class="form-control" id="User" placeholder="usuario">
          </div>
          <div class="col-md-12">
-            <label for="reclamante">Nome</label>
+            <label for="Name">Nome</label>
          </div>
          <div class="form-group">
             <div class="input-group col-md-12">
@@ -20,27 +20,27 @@ Layout = "~/Views/Shared/_Layout_Home.cshtml";
             </div>
          </div>
          <div class="col-md-12">
-            <label for="reclamante">Sobrenome</label>
+            <label for="LastName">Sobrenome</label>
          </div>
          <div class="form-group">
             <div class="input-group col-md-12">
-               <input type="text" class="form-control" id="Name" placeholder="Sobrenome do usuario" >
+               <input type="text" class="form-control" id="LastName" placeholder="Sobrenome do usuario" >
             </div>
          </div>
          <div class="col-md-12">
-            <label for="reclamante">Email</label>
+            <label for="Email">Email</label>
          </div>
          <div class="form-group">
             <div class="input-group col-md-12">
-               <input disabled type="text" class="form-control" id="Name" placeholder="Nome do usuario" >
+               <input disabled type="text" class="form-control" id="Email" placeholder="Nome do usuario" >
             </div>
          </div>
          <div class="col-md-12">
-            <label for="categoria">Departamento</label>
+            <label for="Departamento">Departamento</label>
          </div>
          <div class="form-group">
             <div class="input-group col-md-12">
-               <select id="categoria" class="form-control">
+               <select id="Departamento" class="form-control">
                   <option selected>---</option>
                   <option>Departamento1</option>
                   <option>Departamento2</option>
@@ -49,27 +49,27 @@ Layout = "~/Views/Shared/_Layout_Home.cshtml";
             </div>
          </div>
          <div class="col-md-12">
-            <label for="reclamante">Cargo</label>
+            <label for="Cargo">Cargo</label>
          </div>
          <div class="form-group">
             <div class="input-group col-md-12">
-               <input  type="text" class="form-control" id="Name" placeholder="Cargo" >
+               <input  type="text" class="form-control" id="Cargo" placeholder="Cargo" >
             </div>
          </div>
          <div class="col-md-12">
-            <label for="reclamante">Ramal</label>
+            <label for="Ramal">Ramal</label>
          </div>
          <div class="form-group">
             <div class="input-group col-md-12">
-               <input  type="text" class="form-control" id="Name" placeholder="XXXX-2121" >
+               <input  type="text" class="form-control" id="Ramal" placeholder="XXXX-2121" >
             </div>
          </div>
          <div class="col-md-12">
-            <label for="reclamante">Celular</label>
+            <label for="Celular">Celular</label>
          </div>
          <div class="form-group">
             <div class="input-group col-md-12">
-               <input  type="text" class="form-control" id="Name" placeholder="(99) 99999-9999" >
+               <input  type="text" class="form-control" id="Celular" placeholder="(99) 99999-9999" >
             </div>
          </div>
          <br>
