Pagina de chamado apos criação, alteração do logo, alinhamento de botoes

--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -9,14 +9,14 @@ Layout = "~/Views/Shared/_Layout_Home.cshtml";
          <br>
          <div class="form-group col-md-12">
             <label for="User">Usuario</label>
-            <input disabled type="text" class="form-control" id="User" placeholder="usuario">
+            <input disabled type="text" class="form-control" id="USER" placeholder="usuario">
          </div>
          <div class="col-md-12">
             <label for="Name">Nome</label>
          </div>
          <div class="form-group">
             <div class="input-group col-md-12">
-               <input type="text" class="form-control" id="Name" placeholder="Nome do usuario" >
+               <input type="text" class="form-control" id="NAME" placeholder="Nome do usuario" >
             </div>
          </div>
          <div class="col-md-12">
