--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -12,7 +12,7 @@ ViewData["Title"] = "Login";
                   <fieldset>
                      <div class="row">
                         <div class="clearfix border-bottom margin-bottom-xl">
-                           <h3><strong>ProjetoTg</strong></h3>
+                           <h3><strong>Login</strong></h3>
                         </div>
                      </div>
                      <div class="form-group">
