--- a/Views/Shared/_Layout_Home.cshtml
+++ b/Views/Shared/_Layout_Home.cshtml
@@ -26,11 +26,13 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="~/Home/Index">
-        <div class="sidebar-brand-icon rotate-n-15">
-          <i class="LOGO"></i>
+<a class="sidebar-brand d-flex align-items-center justify-content-center" href="/Home/Index">
+        <div class="sidebar-brand-icon">
+ <div class="brand-icon">
+   <img src="/css/logo.png" alt="Logo" width="120" height="auto">
+</div>
         </div>
-        <div class="sidebar-brand-text mx-3">SGC <sup></sup></div>
+        
       </a>
 
       <!-- Divider -->
