--- a/Views/Ticket/CreateTicket.cshtml
+++ b/Views/Ticket/CreateTicket.cshtml
@@ -9,7 +9,7 @@ Layout = "~/Views/Shared/_Layout_Home.cshtml";
       <div class="form-group col-md-6">
          <div class="form-group col-md-12">
             <label for="abertopor">Aberto por</label>
-            <input disabled type="text" class="form-control" id="abertopor" placeholder="Nome de quem estiver abrindo chamado">
+            <input disabled="" type="text" class="form-control" id="abertopor" placeholder="Nome de quem estiver abrindo chamado">
          </div>
          <div class="col-md-12">
             <label for="reclamante">Reclamante</label>
@@ -28,7 +28,7 @@ Layout = "~/Views/Shared/_Layout_Home.cshtml";
          <div class="form-group">
             <div class="input-group col-md-12">
                <select id="categoria" class="form-control">
-                  <option selected>---</option>
+                  <option selected="">---</option>
                   <option>Problema1</option>
                   <option>Problema2</option>
                   <option>Problema3</option>
@@ -38,21 +38,29 @@ Layout = "~/Views/Shared/_Layout_Home.cshtml";
       </div>
       <!-- Fim do lado esquerdo -->
       <!-- Lado direito -->
-      <div class="form-group col-md-6">
-         <div class="form-group col-md-4">
+      <div class="form-group col-md-3">
+         <div class="form-group col-md-12">
             <label for="usuariosafetados">Usuarios afetados</label>
             <select id="inputEstado" class="form-control">
-               <option selected>---</option>
+               <option selected="">---</option>
                <option>1</option>
                <option>2</option>
                <option>3+</option>
             </select>
          </div>
-         <div class="form-group col-md-4">
+         <div class="form-group col-md-12">
             <label for="severidade">Severidade</label>
-            <input disabled type="text" id="severidade" class="form-control" placeholder="Severidade">
+            <input disabled="" type="text" id="severidade" class="form-control" placeholder="Severidade">
          </div>
       </div>
+    
+    <div class="form-group-3 col-md-3 ">
+                 <div class="form-group">
+   <button type="submit" class="btn btn-primary">Salvar</button>
+   <button type="submit" class="btn btn-primary">Cancelar</button>
+   </div>
+
+   </div>
       <!-- Fim do lado direito -->
    </div>
    <div class="form-group col-md-12">
@@ -69,13 +77,6 @@ Layout = "~/Views/Shared/_Layout_Home.cshtml";
     <input type="file" class="form-control-file" id="Anexo">
   </div>
    </div>
-<br>
-             <div class="form-group col-md-12 ">
-                 <div class="form-group-2">
-   <button type="submit" class="btn btn-primary">Salvar</button>
-   <button type="submit" class="btn btn-primary">Cancelar</button>
-   </div>
 
-   </div>
-   </div>
-</form>
+             
+   </form>
